Fix viewport sizing on mobile

--- a/src/components/views/MainView.module.css
+++ b/src/components/views/MainView.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     width: 100%;
     min-height: 100vh;
+    min-height: 100dvh;
 }
 
 @media screen and (min-width: 768px) {
